# fiery-post-process

./: CMakeLists.txt  Hungarian.cpp  README.md  fiery_process.cpp  fiery_process.h  main.cpp
data/: instance_center.pt  instance_flow.pt  instance_offset.pt  segmentation.pt
